feat: add isexe module for executable file checks
- Implemented isexe module to check if a file is executable across platforms.
- Added support for both asynchronous and synchronous checks.
- Introduced a Windows-specific implementation for executable checks.
- Created tests for various scenarios including promise support and error handling.

feat: add path-key module for cross-platform PATH key retrieval

- Added path-key module to retrieve the PATH environment variable key in a cross-platform manner.
- Included TypeScript definitions for better type support.

feat: add shebang-command module to parse shebang lines

- Introduced shebang-command module to extract commands from shebang lines.
- Added tests and documentation for usage.

feat: add which module to find executables in PATH

- Implemented which module to find the first instance of an executable in the PATH.
- Added both asynchronous and synchronous interfaces.
- Included command-line utility for usage in shell environments.
- Updated documentation and added tests for various scenarios.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:gh": "cross-env GITHUB_PAGES=true vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
+    "cross-env": "^7.0.3",
     "vite": "^5.4.2"
   }
 }
