feat: add new educational games for 3rd grade including "Valor posicional" and related pages
- Created index.html for 3rd grade with game cards and navigation.
- Added "Valor posicional" game page with levels and game mechanics.
- Implemented a script to generate multi-page application (MPA) structure for games.
- Introduced data structure for years and games in games.js.
- Developed shared CSS styles for consistent design across pages.
- Added JavaScript functionality for search and tag filtering on game hub.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "build:gh": "cross-env GITHUB_PAGES=true vite build",
+    "dev": "node scripts/generate-mpa.js && vite",
+    "build": "node scripts/generate-mpa.js && vite build",
+    "build:gh": "cross-env GITHUB_PAGES=true node scripts/generate-mpa.js && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
